[project]
name = "demo-tdd-drones"
version = "0.1.0"
description = "TDD Demo: Drone Flight Data Analysis"
authors = []
requires-python = ">=3.10,<3.13"
dependencies = [
    "duckdb >=1.3.0,<2.0.0",
    "humanize >=4.12.0,<5.0.0",
    "pandas >=2.2.0,<3.0.0",
    "plotly >=6.2.0,<7.0.0",
    "pyarrow >=18.0.0,<19.0.0",
    "pydantic >=2.11.0,<3.0.0",
    "pydantic-settings >=2.9.0,<3.0.0",
    "streamlit >=1.46.0,<2.0.0",
    "pyulog >=1.2.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest >=8.4.0,<9.0.0",
    "ruff ==0.12.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C90", # mccabe (cyclomatic complexity)
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # pylint
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings

]
ignore = [
    "D203",    # conflicts with D211
    "D213",    # conflicts with D212
    "PLC0415", # pylint (non top-level imports)
]
exclude = ["**/*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"./test/**/*.py" = ["S101", "D", "PLR2004"]
